
$Id$
$Source$

2003-02-01 Robin Johnson  <robbat2@users.sourceforge.net>
    * R.I.P.: --- On Feb. 1, 2003, the Space Shuttle Columbia (STS-107) was lost during its
    re-entry into Earth's atmosphere. In memory of the brave men and women who
    gave their lives for the people of Earth. ---
    * Documentation.html: Removed a bit of duplication in [7.4] and the
    Developers section

2003-02-01 Michal Cihar  <nijel@users.sourceforge.net>
    * Documentati-on.*, translators.html, docs.css: New documentation layout.
    * scripts/create-release.sh: Added --dont_wrap_pre to lynx parameters.

2003-02-01 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php3, tbl_replace.php3, (new)tbl_replace_fields.php3,
      db_details.php3, tbl_query_box.php3, libraries/common.lib.php3:
      new Feature: BLOB field upload
      (TODO: handle open_basedir restrictions)

2003-01-31 Alexander M. Turek  <rabus@users.sourceforge.net>
    * config.inc.php3, Documentation.html, libraries/common.lib.php3,
      libraries/config_import.lib.php3: Added experimental support for
      compressed connections to the MySQL server.

2003-01-30 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details_structure.php3, libraries/fpdf/fpdf.php3: better browser
      support, thanks to Jose Fandos (jose.fandos at sonnd.com)

2003-01-30 Michal Cihar  <nijel@users.sourceforge.net>
    * Documentation*: Added faq 1.27 about GZIP output buffering problem.
    * Documentation.html, translators.html: Unified using of font sizes.

2003-01-30 Alexander M. Turek  <rabus@users.sourceforge.net>
    * main.php3, user_details.php3, libraries/user_details.js: Removed the old
      user management.
    * server_processlist.php3: Fixed a bug the denied the access to the
      process list for normal users.
    * config.inc.php3: Removed note about buggy setting.
    * lang/german-*.inc.php3: Updates.
    * Documentation.html: There won't be a PHP 4.5.0; typos.
