@@ -1400,6 +1400,36 @@ $cfg['PmaAbsoluteUri'] = (!empty($_SERVER['HTTPS']) ? 'https' : 'http') . '://'
     <br /><br />
     </dd>
 
+    <dt><b>$cfg['DBG']['enable']</b> boolean</dt>
+    <dd>
+    <b>DEVELOPERS ONLY!</b><br />
+    Enable the DBG extension for debugging phpMyAdmin. Required for profiling
+    the code.
+    <br />
+    For help in setting up your system to this, see the
+    <a href="#developersdbg">Developers</a> section.
+    </dd>
+
+    <dt><b>$cfg['DBG']['profile']['enable']</b> boolean</dt>
+    <dd>
+    <b>DEVELOPERS ONLY!</b><br />
+    Enable profiling support for phpMyAdmin. This will append a chunk of data
+    to the end of every page displayed in the main window with profiling
+    statistics for that page.<br />
+    You may need need to increase the maximum execution time for this to
+    complete successfully.
+    </dd>
+
+    <dt><b>$cfg['DBG']['profile']['threshold']</b> float (units in milliseconds)</dt>
+    <dd>
+    <b>DEVELOPERS ONLY!</b><br />
+    When profiling data is displayed, this variable controls the threshold of
+    display for any profiling data, based on the average time each time has
+    taken. If it is over the threshold it is displayed, otherwise it is not
+    displayed. This takes a value in milliseconds. In most cases you don't need
+    to edit this.
+    </dd>
+
     <dt><b>$cfg['ColumnTypes'] </b>array</dt>
     <dd>
         All possible types of a MySQL column. In most cases you don't need to
@@ -2578,7 +2608,7 @@ $cfg['PmaAbsoluteUri'] = (!empty($_SERVER['HTTPS']) ? 'https' : 'http') . '://'
         please try to keep your code as simple as possible: beginners are
         using phpMyAdmin as an example application.<br />
         As far as possible, we want the scripts to be XHTML1.0 and CSS2
-        compliant on one hand, they fit
+        compliant on one hand, they fit the
         <a href="http://pear.php.net/" target="_blank">PEAR coding standards</a>
         on the other hand. Please pay attention to this.
     </li>
@@ -2594,6 +2624,17 @@ $cfg['PmaAbsoluteUri'] = (!empty($_SERVER['HTTPS']) ? 'https' : 'http') . '://'
     <li>
         If you want to be really helpful, write an entry for the ChangeLog.
     </li>
+    <li id="developersdbg">
+        The DBG extension (<a href="http://dd.cron.ru/dbg/" target="_blank">PHP
+          Debugger DBG</a>) is now supported by phpMyAdmin for developers to
+        better debug and profile their code.<br /> 
+        Please see the <tt>$cfg['DBG']*</tt> configuration options for more
+        information.<br />
+        This is in memorium of the Space Shuttle Columbia (STS-107) which was
+        lost during its re-entry into Earth's atmosphere and in memory of the
+        brave men and women who gave their lives for the people of Earth.
+    </li>
+
 </ul>
 
 <!-- CREDITS -->
